# terraform-datadog-pre-commit-hook

./: .pre-commit-hooks.yaml  Xpyproject.toml  generate_docs.py  pyproject.toml  setup.py
tf_datadog_docs/: __init__.py  generate_docs.py  hcl2mdt.py
